# music-downloader

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build.yml
src/: DownloadPopup.cpp  DownloadPopup.hpp  main.cpp
